JumpScript/tests/baselines/reference/symbolProperty30.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty30.jump(5,6): error TS1023: An index signature parameter type must be 'string' or 'number'.


==== tests/cases/conformance/es6/Symbols/symbolProperty30.jump (1 errors) ====
    class C1 {
        [Symbol.toStringTag]() {
            return { x: "" };
        }
        [s: symbol]: () => { x: number };
         ~
!!! error TS1023: An index signature parameter type must be 'string' or 'number'.
    }